Stretch - Add fixed nav bar with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -159,15 +159,19 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  margin-top: 9rem;
 }
 .nav-header {
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.726);
   width: 100%;
   height: 9rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 .nav-container {
   display: flex;
