--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,6 @@
 // Navigation code here
 
-@header-bg-color: #F6F6F6;
+@header-bg-color: rgba(246, 246, 246, 0.726);
 
 
 .nav-header {
@@ -9,6 +9,10 @@
     width: 100%;
     height: 9rem;
     .flex-row(row; center; center);
+    
+    position: fixed;
+    top:0;
+    z-index: 1;
 }
 
 .nav-container {
